# time-stream

./: .editorconfig  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  Untitled.ipynb  pyproject.toml  rename-package.sh  sandbox.ipynb
.githooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: pipeline.yml  publish.yml
CHANGELOG/: 1.0.0.md
benchmarks/time_series/: test_benchmark_aggregation.py
docs/: Makefile  conf.py
docs/source/: conf.py  index.rst
docs/source/_static/css/: custom.css
docs/source/_templates/autosummary/: attribute.rst  method.rst  property.rst
docs/source/_templates/partials/: nav-socials.html
docs/source/api/: aggregation.rst  infilling.rst  quality_control.rst  time_frame.rst
docs/source/api/_api/: time_stream.TimeFrame.add_flag.rst  time_stream.TimeFrame.aggregate.rst  time_stream.TimeFrame.alignment.rst  time_stream.TimeFrame.calculate_min_max_envelope.rst  time_stream.TimeFrame.column_metadata.rst  time_stream.TimeFrame.columns.rst  time_stream.TimeFrame.data_columns.rst  time_stream.TimeFrame.decode_flag_column.rst  time_stream.TimeFrame.df.rst  time_stream.TimeFrame.encode_flag_column.rst  time_stream.TimeFrame.filter_by_flag.rst  time_stream.TimeFrame.flag_columns.rst  time_stream.TimeFrame.get_flag_column.rst  time_stream.TimeFrame.get_flag_system.rst  time_stream.TimeFrame.infill.rst  time_stream.TimeFrame.init_flag_column.rst  time_stream.TimeFrame.metadata.rst  time_stream.TimeFrame.offset.rst  time_stream.TimeFrame.pad.rst  time_stream.TimeFrame.periodicity.rst  time_stream.TimeFrame.qc_check.rst  time_stream.TimeFrame.register_flag_column.rst  time_stream.TimeFrame.register_flag_system.rst  time_stream.TimeFrame.remove_flag.rst  time_stream.TimeFrame.rename_time_column.rst  time_stream.TimeFrame.resolution.rst  time_stream.TimeFrame.rolling_aggregate.rst  time_stream.TimeFrame.select.rst  time_stream.TimeFrame.sort_time.rst  time_stream.TimeFrame.time_anchor.rst  time_stream.TimeFrame.time_name.rst  time_stream.TimeFrame.with_column_metadata.rst  time_stream.TimeFrame.with_df.rst  time_stream.TimeFrame.with_flag_system.rst  time_stream.TimeFrame.with_metadata.rst  time_stream.TimeFrame.with_periodicity.rst  time_stream.aggregation.AggregationPipeline.rst  time_stream.aggregation.AngularMean.rst  time_stream.aggregation.ConditionalCount.rst  time_stream.aggregation.Max.rst  (+22 more)
docs/source/developer/: contributing.rst  documentation.rst
docs/source/getting_started/: concepts.rst  installation.rst  quick-start.rst  quick_start.rst
docs/source/user_guide/: aggregation.rst  calculations.rst  flagging.rst  infilling.rst  intro.rst  periods.rst  quality_control.rst  rolling_aggregation.rst  timeseries_basics.rst
docs/sources/: modules.rst  mypackage.rst
docs/src/time_stream/examples/: examples_infilling.py
scripts/: bump.py  release.py
src/time_series/: __init__.py  aggregation.py  aggregation_base.py  base.py  bitwise.py  columns.py  example.py  flag_manager.py  period.py  relationships.py  time_series_base.py  time_series_polars.py
src/time_series/docs/source/: conf.py  index.rst
src/time_series/docs/source/user_guide/: timeseries_basics.rst
src/time_series/examples/: examples_periods.py  examples_timeseries_basics.py  utils.py
src/time_stream/: __init__.py  aggregation.py  aggregation2.py  aggregation_base.py  base.py  bitwise.py  calculations.py  columns.py  enums.py  exceptions.py  flag_manager.py  formatting.py  infill.py  metadata.py  operation.py  period.py  qc.py  relationships.py  test.py  time_manager.py  time_properties.py  types.py  utils.py
src/time_stream/docs/: Makefile
src/time_stream/docs/source/: conf.py
src/time_stream/docs/source/getting_started/: quick_start.rst
src/time_stream/docs/source/user_guide/: periods.rst
src/time_stream/examples/: examples_aggregation.py  examples_flagging.py  examples_infilling.py  examples_periods.py  examples_quality_control.py  examples_quick_start.py  examples_rolling_aggregation.py  examples_timeseries_basics.py  utils.py
src/time_stream/flags/: bitwise_flag_system.py  categorical_flag_system.py  flag_manager.py  flag_system.py
tests/time_series/: test_aggregation.py  test_base.py  test_bitwise.py  test_columns.py  test_flag_manager.py  test_period.py  test_relationships.py  test_time_series.py  test_time_series_polars.py
tests/time_stream/: test_aggregation.py  test_aggregation2.py  test_base.py  test_bitwise.py  test_calculations.py  test_columns.py  test_docs_examples.py  test_flag_manager.py  test_formatting.py  test_infill.py  test_period.py  test_qc.py  test_relationships.py  test_time_manager.py  test_utils.py
tests/time_stream/examples/: test_examples.py
tests/time_stream/flags/: test_bitwise_flag.py  test_categorical_flag.py  test_flag_manager.py
