[build-system]
requires = ["setuptools >= 61.0", "autosemver"]

[project]
requires-python = ">=3.12"
dependencies = [
    "autosemver",
    "setuptools < 81",
    "config>=0.5.1",
    "polars>=1.1.0",
    "pyarrow>=17.0.0",
    "pydantic>=2.8.2",
    "isodate",
    "setuptools",
    "numpy",
    "scipy>=1.16.1",
    "matplotlib>=3.10.5",
    "altair>=5.5.0",
]
name = "time-stream"
dynamic = ["version"]
authors = [
    { name = "Dom Ginger", email = "domgin@ceh.ac.uk" },
    { name = "Nathan Shaw", email = "natsha@ceh.ac.uk" },
    { name = "Lewis Chambers", email = "lewcha@ceh.ac.uk" },
    { name = "Rod Scott", email = "rjsc@ceh.ac.uk" },
    { name = "Simon Stanley", email = "simsta@ceh.ac.uk" },
    { name = "Richard Smith", email = "ricsmi@ceh.ac.uk" },
    { name = "Jonathan Cooper", email = "jcoop@ceh.ac.uk" },
]
description = "Time-Stream: Time Series Toolkit for Rapid Environmental Analysis and Monitoring"
readme = "README.md"
license = "GPL-3.0-only"

[dependency-groups]
test = ["pytest", "pytest-cov", "parameterized", "freezegun", "pytest-benchmark", "pytest-benchmark[histogram]"]
docs = ["sphinx", "sphinx-copybutton", "sphinx-rtd-theme", "nbsphinx", "jupyter_sphinx", "snowballstemmer<3"]
lint = ["ruff"]
dev = [
  { include-group = "test"},
  { include-group = "docs"},
  { include-group = "lint"},
  "shibuya>=2025.9.25",
  "sphinx-contributors>=0.2.7",
  "sphinx-design>=0.6.1",
  "sphinx-iconify>=0.2.1",
  "sphinx-tabs>=3.4.7",
  "sphinxcontrib-mermaid>=1.0.0",
]

[tool.setuptools.dynamic]
version = { attr = "time_stream.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["time_stream*"]

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
addopts = "--cov=time_stream --cov-report=term-missing --benchmark-skip"
markers = ["slow: Marks slow tests"]


[tool.coverage.run]
omit = [
    "*__init__.py",
    "src/time_stream/__main__.py",
    "src/time_stream/period.py",
    "src/time_stream/examples/*",
    "src/time_stream/docs/*",
]

filterwarnings = [
    "ignore::DeprecationWarning:autosemver.*:",
    "ignore::DeprecationWarning:pkg_resources.*:",
]

[tool.ruff]
src = ["src", "tests"]
include = ["src/**.py", "tests/**.py"]
line-length = 120
exclude = [
    "src/time_stream/docs"
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "A",
    "PLC",
    "PLE",
    "PLW",
    "I",
    "N816",
    "ANN001",
    "ANN201",
    "ANN202",
    "ANN205",
    "ANN206",
]

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.per-file-ignores]
# Ignore "import not at top of file" for examples code snippets
"src/time_stream/examples/*.py" = ["PLC0415"]
