[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "time-stream"
version = "1.0.0"
description = "Time-Stream: Time Series Toolkit for Rapid Environmental Analysis and Monitoring"
readme = "README.md"
authors = [
    { name = "Dom Ginger", email = "domgin@ceh.ac.uk" },
    { name = "Nathan Shaw", email = "natsha@ceh.ac.uk" },
    { name = "Lewis Chambers", email = "lewcha@ceh.ac.uk" },
    { name = "Rod Scott", email = "rjsc@ceh.ac.uk" },
    { name = "Simon Stanley", email = "simsta@ceh.ac.uk" },
    { name = "Richard Smith", email = "ricsmi@ceh.ac.uk" },
    { name = "Jonathan Cooper", email = "jcoop@ceh.ac.uk" },
]
classifiers = [
"License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
license = { file = "LICENSE" }
dependencies = [
    "config>=0.5.1",
    "polars>=1.1.0",
    "pyarrow>=17.0.0",
    "pydantic>=2.8.2",
    "isodate",
    "numpy",
    "scipy>=1.16.1",
    "matplotlib>=3.10.5",
    "altair>=5.5.0",
    "pandas>=2.3.2",
    "sphinx-autodoc-typehints>=3.2.0",
]
requires-python = ">= 3.12"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
    { include-group = "docs" },
]
lint = [
    "ruff",
]
test = [
    "coverage",
    "pytest",
    "pytest-cov",
]
typecheck = [
    "pyright",
]
docs = [
    "sphinx",
    "shibuya>=2025.9.25",
    "sphinx-copybutton",
    "sphinx-design>=0.6.1",
    "sphinx-iconify>=0.2.1",
    "sphinx-autodoc-typehints",
    "sphinx-autobuild",
    "sphinx-contributors>=0.2.7",
    "myst-parser",
    "sphinx-tabs>=3.4.7",
    "sphinxcontrib-mermaid>=1.0.0",
    "nbsphinx",
    "jupyter_sphinx",
    "snowballstemmer<3"
]

[project.urls]
bugs = "https://github.com/NERC-CEH/time-stream/issues"
changelog = "https://github.com/NERC-CEH/time-stream/releases"
documentation = "https://nerc-ceh.github.io/time-stream/"
homepage = "https://github.com/NERC-CEH/time-stream"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
exclude = ["src/time_stream/examples"]

[tool.ruff]
src = ["src", "tests"]
include = ["src/**.py", "tests/**.py"]
line-length = 120
exclude = [
    "src/time_stream/docs"
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "A",
    "PLC",
    "PLE",
    "PLW",
    "I",
    "N816",
    "ANN001",
    "ANN201",
    "ANN202",
    "ANN205",
    "ANN206",
]

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.per-file-ignores]
# Ignore "import not at top of file" for examples code snippets
"src/time_stream/examples/*.py" = ["PLC0415"]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/", "tests/"]
omit = [
    "*__init__.py",
    "src/time_stream/__main__.py",
    "src/time_stream/period.py",
    "src/time_stream/examples/*",
    "src/time_stream/docs/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "except PackageNotFoundError",
    "if __name__ == .__main__.",
    "\\.\\.\\.",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=time_stream --cov-report=term-missing"
markers = ["slow: Marks slow tests"]

[tool.uv]
package = true
default-groups = ["dev"]

